opam-version: "2.0"

name: "OGaml"
version: "0.1"

synopsis: "A multimedia library for OCaml"
description: """
A multimedia library for OCaml
"""

maintainer: ["Théo Winterhalter" "Victor Lanvin <victor.lanvin@irif.fr>"]
authors: ["Théo Winterhalter" "Victor Lanvin <victor.lanvin@irif.fr>"]
license: "MIT"
homepage: "https://ogaml.github.io"
bug-reports: "https://github.com/ogaml/ogaml/issues"
dev-repo: "https://github.com/ogaml/ogaml.git"

depends: [
  "dune"
  "menhir"
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
