(copy_files stubs/*)

(library
  (name        OgamlAudio)
  (public_name ogaml.audio)
  (libraries   OgamlMath OgamlUtils threads)
  (c_names     utils audio_stubs buffer_stubs context_stubs device_stubs 
               listener_stubs source_stubs stb_stubs stb_vorbis)
  (c_flags     (:standard (:include ../../c_flags.os)))
  (install_c_headers stb_vorbis)
  (c_library_flags (:standard (:include ../../c_libs.os))))
