(copy_files stubs/*)

(ocamlyacc objParser)
(ocamllex objLexer)

(library
  (name        OgamlGraphics)
  (public_name ogaml.graphics)
  (libraries   OgamlMath OgamlCore OgamlUtils threads bigarray str)
  (c_names     utils shader_stubs program_stubs texture_stubs vao_stubs
               vbo_stubs uniform_stubs text_stubs render_stubs ebo_stubs
               image_stubs blending_stubs fbo_stubs rbo_stubs types_stubs)
  (c_flags     (:standard (:include ../../c_flags.os)))
  (install_c_headers stb_image stb_image_write stb_truetype)
  (c_library_flags (:standard (:include ../../c_libs.os))))
